# agentref-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentref/: __init__.py  _http.py  client.py  errors.py
agentref/resources/: __init__.py  affiliates.py  billing.py  conversions.py  flags.py  merchant.py  notifications.py  payout_info.py  payouts.py  programs.py  webhooks.py
agentref/types/: __init__.py  models.py
tests/: test_async.py  test_errors.py  test_http.py  test_programs.py
