[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentref"
version = "1.0.0"
description = "Official Python SDK for the AgentRef Affiliate API"
authors = [{ name = "AgentRef", email = "hi@agentref.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "mypy>=1.9.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.9"

[tool.hatch.build.targets.wheel]
packages = ["agentref"]
